--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
- 
+# 依赖目录
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# 环境变量文件（包含敏感信息如API密钥）
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# 操作系统文件
+.DS_Store
+Thumbs.db
+
+# 编辑器目录和文件
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# 日志文件
+logs
+*.log
+
+# 构建输出
+/dist
+/build
+
+# 缓存目录
+.cache/
+.npm/
+
+# 其他
+.vercel
+.netlify 
